--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,6 +1,10 @@
 <Project>
     <ItemGroup>
+        <PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4" />
+        <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.4" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageVersion Include="xunit" Version="2.9.3" />
         <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0">
             <PrivateAssets>all</PrivateAssets>
