--- a/Api/NewsApp.Api.csproj
+++ b/Api/NewsApp.Api.csproj
@@ -6,4 +6,8 @@
     <ItemGroup>
         <ProjectReference Include="..\Infrastructure\NewsApp.Infrastructure.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    </ItemGroup>
 </Project>
