--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,6 +1,7 @@
 <Project>
     <ItemGroup>
         <PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
+        <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
         <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.4" />
