--- a/Api/NewsApp.Api.csproj
+++ b/Api/NewsApp.Api.csproj
@@ -9,5 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+      <PackageReference Include="Scalar.AspNetCore" />
     </ItemGroup>
 </Project>
