--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,6 +2,7 @@
     <ItemGroup>
         <PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
+        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
         <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.4" />
@@ -13,6 +14,7 @@
         <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
         <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.0-beta.1" />
         <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
+        <PackageVersion Include="Scalar.AspNetCore" Version="2.2.7" />
         <PackageVersion Include="xunit" Version="2.9.3" />
         <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0">
             <PrivateAssets>all</PrivateAssets>
